--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AndroidFirebaseSample</string>
+    <string name="facebook_app_id">1695537567426597</string>
 </resources>
